Added db in login