@@ -9,6 +9,11 @@ javafx {
     modules = [ 'javafx.controls','javafx.fxml']
 }
 
+
+application {
+    mainClass.set("GUI.GUI")
+}
+
 repositories {
     mavenCentral()
 }
@@ -20,6 +25,16 @@ dependencies {
     implementation group: 'org.apache.ibatis', name: 'ibatis-core', version: '3.0'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
 
+}
+
+run {
+    jvmArgs = [
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+    ]
 }
 
 javadoc {
